--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./src/output.css">
 </head>
 <body class="min-h-screen">
     <section class="flex flex-col justify-center items-center h-screen bg-ui-background dark:text-white">
         <div class="flex flex-col gap-2">
-            <p class="text-sm font-medium">Début de la journée</p>
-            <article class="flex flex-col items-center bg-white/10 pb-4 pt-2 px-6 rounded">
-                <p class="text-6xl/none font-semibold">9:45</p>
-            </article>
+            <h1>Hello World !</h1>
         </div>
     </section>
 </body>
