--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./src/output.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mzelle Lilas</title>
 </head>
-<body class="min-h-screen">
-    <section class="flex flex-col justify-center items-center h-screen bg-ui-background dark:text-white">
-        <div class="flex flex-col gap-2">
-            <h1>Hello World !</h1>
-        </div>
-    </section>
+
+<body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
+
 </html>
